--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,8 @@
-/* You can add global styles to this file, and also import other style files */
+body {
+    padding: 0;
+    margin: 0;
+    background-color: #484848;
+   /*  font-family:
+    decide font-family later on as we develop more of the application */
+}
+
